--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "^5.9.55",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "frontend": "file:",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "postcss": "^8.4.47",
+    "pinia": "^2.2.6",
     "roboto-fontface": "*",
-    "tailwindcss": "^3.4.13",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.7.2",
