--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "frontend": "file:",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "loadsh": "^0.0.4",
     "pinia": "^2.2.6",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
